--- a/project/index.html
+++ b/project/index.html
@@ -14,7 +14,9 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Krub:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Krub:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -72,12 +74,20 @@
             </ul>
           </li> -->
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="#about">Schedule an Appointment</a></li>
+
+          <li><a class="getstarted scrollto" href="#contact">Schedule an Appointment</a></li>
+
         </ul>
+
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
+      <form id="form" role="search" method="get" action="https://www.google.com/search">
+        <input type="search" id="query" placeholder="Search Google" size=15 aria‐label="Search">
+      </form>
 
+      </form>
     </div>
+
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
@@ -86,7 +96,7 @@
     <div class="container d-flex flex-column align-items-center justify-content-center" data-aos="fade-up">
       <h1>Nest Mental Health</h1>
       <h2>Perinatal Services</h2>
-      <a href="#about" class="btn-get-started scrollto">Schedule an Appointment</a>
+      <a href="#contact" class="btn-get-started scrollto">Schedule an Appointment</a>
       <img src="assets/img/hero-img.png" class="img-fluid hero-img" alt="" data-aos="zoom-in" data-aos-delay="150">
     </div>
 
@@ -101,11 +111,13 @@
         <div class="row no-gutters">
           <div class="content col-xl-5 d-flex align-items-stretch" data-aos="fade-right">
             <div class="content">
-              <h3>Voluptatem dignissimos provident quasi</h3>
+              <h3>Our Story</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
+                The Nest has been hand crafted to help you feel supported and heard. We are constantly growing and
+                changing just like you. If there is ever anything we can do to make your experience better, don't
+                hesitat to tell us. Here, your voice matters.
               </p>
-              <a href="#" class="about-btn">About us <i class="bx bx-chevron-right"></i></a>
+              <!-- <a href="#" class="about-btn">About us <i class="bx bx-chevron-right"></i></a> -->
             </div>
           </div>
           <div class="col-xl-7 d-flex align-items-stretch" data-aos="fade-left">
@@ -113,23 +125,26 @@
               <div class="row">
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
                   <i class="bx bx-receipt"></i>
-                  <h4>Corporis voluptates sit</h4>
-                  <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+                  <h4>Founding</h4>
+                  <p>Opened in Logan, UT in 2025 to help women and mothers navigate the challenges of life.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
                   <i class="bx bx-cube-alt"></i>
-                  <h4>Ullamco laboris nisi</h4>
-                  <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                  <h4>Our Approach</h4>
+                  <p>We utilize several types of modalities to help you have a comfortable experience that works for
+                    you.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                   <i class="bx bx-images"></i>
-                  <h4>Labore consequatur</h4>
-                  <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
+                  <h4>Our Why</h4>
+                  <p>Research has shown therapy is an incredible resource to recovering from mental illness and
+                    improving relationships. An amazing part of our job is watching clients better their lives and
+                    improve in their circumstances. </p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
                   <i class="bx bx-shield"></i>
-                  <h4>Beatae veritatis</h4>
-                  <p>Expedita veritatis consequuntur nihil tempore laudantium vitae denat pacta</p>
+                  <h4>Privacy</h4>
+                  <p>We know therapy requires vulnerability. We respect confidentiality for all clients.</p>
                 </div>
               </div>
             </div><!-- End .content-->
@@ -308,38 +323,45 @@
 
         <div class="section-title">
           <h2>Services</h2>
-          <p>We specialize in a variety of services for women.</p>
+          <p>We specialize in a variety of services for women. Click the cards for links to helpful resources. </p>
         </div>
 
         <div class="row">
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+            data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-female"></i></div>
-              <h4 class="title"><a href="">Motherhood</a></h4>
-              <p class="description">Support through familial relationships and tools to maintain equilibrium with the difficulties of being a mother and spouse.</p>
+              <h4 class="title"><a href="https://www.nami.org/Blogs/NAMI-Blog/October-2022/Surviving-Motherhood-and-Mental-Health-What-I-Wish-I-Knew-When-Life-Went-Off-Script">Motherhood</a></h4>
+              <p class="description">Support through familial relationships and tools to maintain equilibrium with the
+                difficulties of being a mother and spouse.</p>
             </div>
           </div>
 
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+            data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bx bxs-baby-carriage"></i></div>
-              <h4 class="title"><a href="">Pregnancy</a></h4>
-              <p class="description">Support from family planning to conception, loss or trauma, and pregnancy to birth. </p>
+              <h4 class="title"><a href="https://www.postpartum.net/">Pregnancy</a></h4>
+              <p class="description">Support from family planning to conception, loss or trauma, and pregnancy to birth.
+              </p>
             </div>
           </div>
 
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+            data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class="bx bxs-error"></i></div>
-              <h4 class="title"><a href="">Anxiety</a></h4>
-              <p class="description">Support through uncertainty, doubt, or other perceieved threats and tools to maintain control. </p>
+              <h4 class="title"><a href="https://www.nichd.nih.gov/ncmhep/initiatives/moms-mental-health-matters/moms">Anxiety</a></h4>
+              <p class="description">Support through uncertainty, doubt, or other perceieved threats and tools to
+                maintain control. </p>
             </div>
           </div>
 
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="400">
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+            data-aos-delay="400">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-cloud-drizzle"></i></div>
-              <h4 class="title"><a href="">Depression</a></h4>
+              <h4 class="title"><a href="https://www.cdc.gov/reproductivehealth/depression/resources.htm">Depression</a></h4>
               <p class="description">Support through sadness, emptiness, or hopelessness and tools for coping. </p>
             </div>
           </div>
@@ -347,6 +369,7 @@
         </div>
 
       </div>
+      
     </section><!-- End Services Section -->
 
     <!-- ======= Portfolio Section ======= -->
@@ -527,7 +550,7 @@
               </div>
             </div>End testimonial item -->
 
-            <!-- <div class="swiper-slide">
+    <!-- <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -540,7 +563,7 @@
               </div>
             </div>End testimonial item -->
 
-            <!-- <div class="swiper-slide">
+    <!-- <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -553,7 +576,7 @@
               </div>
             </div>End testimonial item -->
 
-            <!-- <div class="swiper-slide">
+    <!-- <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -566,7 +589,7 @@
               </div>
             </div>End testimonial item -->
 
-            <!-- <div class="swiper-slide">
+    <!-- <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -579,7 +602,7 @@
               </div>
             </div>End testimonial item -->
 
-          <!-- </div>
+    <!-- </div>
           <div class="swiper-pagination"></div>
         </div>
 
@@ -592,7 +615,9 @@
 
         <div class="section-title">
           <h2>Providers</h2>
-          <p>Our providers are trained and specialize in various types of therapy types including Acceptance and Commitment (ACT), Brainspotting, Cognitive Behavioral (CBT), Exposure Response Prevention (ERP), Internal Family Systems (IFS), and Mindfulness-Based (MBCT).
+          <p>Our providers are trained and specialize in various types of therapy types including Acceptance and
+            Commitment (ACT), Brainspotting, Cognitive Behavioral (CBT), Exposure Response Prevention (ERP), Internal
+            Family Systems (IFS), and Mindfulness-Based (MBCT).
           </p>
         </div>
 
@@ -616,7 +641,7 @@
             </div>
           </div>
 
-           <!-- <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+          <!-- <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
               <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
               <div class="member-info">
@@ -817,7 +842,7 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Visit us at our location or connect with us through the methods below.</p>
+          <p>Visit us at our location or send us a message below to schedule an appointment or ask us a question.</p>
         </div>
 
         <div class="row">
@@ -829,21 +854,21 @@
                 <div class="info-box">
                   <i class="bx bx-map"></i>
                   <h3>Our Address</h3>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+                  <p>95 Golf Course Rd Ste #105, Logan, UT 84321</p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="info-box mt-4">
                   <i class="bx bx-envelope"></i>
                   <h3>Email Us</h3>
-                  <p>info@example.com<br>contact@example.com</p>
+                  <p>madeleine@nesttherapy.com</p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="info-box mt-4">
                   <i class="bx bx-phone-call"></i>
                   <h3>Call Us</h3>
-                  <p>+1 5589 55488 55<br>+1 6678 254445 41</p>
+                  <p>435-915-6398</p>
                 </div>
               </div>
             </div>
@@ -868,7 +893,7 @@
               </div>
               <div class="my-3">
                 <div class="loading">Loading</div>
-                <div class="error-message"></div>
+                <!-- <div class="error-message"></div> -->
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
@@ -890,13 +915,13 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Bikin</h3>
+            <h3>Nest</h3>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
+              95 Golf Course Road Ste #105 <br>
+              Logan, UT 84321<br>
               United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              <strong>Phone:</strong> 435-915-6398<br>
+              <strong>Email:</strong> madeleine@nesttherapy.com<br>
             </p>
           </div>
 
@@ -906,25 +931,25 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <!-- <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li> -->
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
+            <!-- <h4>Our Services</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
-            </ul>
+            </ul> -->
           </div>
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Join Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <p>Join our monthly newsletter for thoughts and strategies related to mental health topics.</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
@@ -938,7 +963,7 @@
 
       <div class="me-md-auto text-center text-md-start">
         <div class="copyright">
-          &copy; Copyright <strong><span>Bikin</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>Nest</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
@@ -949,17 +974,20 @@
         </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
+        <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
+        <a href="https://www.instagram.com/newbeginningstherapy_newu/?igshid=YmMyMTA2M2Y%3D" class="instagram"><i
+            class="bx bxl-instagram"></i></a>
+        <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
+        <a href="https://www.linkedin.com/in/madeleine-jones-790554122" class="linkedin"><i
+            class="bx bxl-linkedin"></i></a>
       </div>
     </div>
   </footer><!-- End Footer -->
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/aos/aos.js"></script>
